<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="72dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    tools:context=".general.Usuarios">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/lbl_inf"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Llene los campos para agregar un nuevo usuario o busque uno existente por cédula.">

        </TextView>

        <Spinner
            android:id="@+id/sp_usuarios"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="5dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_cedula_a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Cédula"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_buscar_cedula"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="Buscar" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_nombre_a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Nombres" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_apellido_a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Apellidos" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_edad_a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Edad"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:orientation="horizontal">


            <RadioButton
                android:id="@+id/rd_masculino"
                android:layout_width="178dp"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/chk_masculino" />

            <RadioButton
                android:id="@+id/rd_femenino"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:text="@string/chk_femenino" />
        </RadioGroup>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_i_usuario_a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_usuario" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_pass_a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_pass"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="Solcitar cambio de contraseña" />


        <Button
            android:id="@+id/btn_save_user"
            android:layout_width="274dp"
            android:layout_height="49dp"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:background="@drawable/btn_login"
            android:text="@string/btn_guardar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/scrollView2" />
    </LinearLayout>


</ScrollView>


